--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-total 6.6M
+total 10M
 -rw-r--r-- 1 qwe qwe 3.0M Dec 20 08:01 0-01-20221220080011.mkv
 -rw-r--r-- 1 qwe qwe 3.4M Dec 20 08:02 0-01-20221220080111.mkv
 -rw-r--r-- 1 qwe qwe 297K Dec 20 08:03 0-01-20221220080211.mkv
--rw-r--r-- 1 qwe qwe    0 Dec 20 08:32 0-02-20221220083247.mkv
+-rw-r--r-- 1 qwe qwe  81K Dec 20 08:33 0-02-20221220083247.mkv
+-rw-r--r-- 1 qwe qwe 3.3M Dec 20 10:11 0-03-20221220101023.mkv
