--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-total 1.0M
--rw-r--r-- 1 qwe qwe 1.0M Dec 22 07:08 0-01-20221222070846.mkv
+total 2.5M
+-rw-r--r-- 1 qwe qwe 2.5M Dec 22 07:10 0-01-20221222070846.mkv
+-rw-r--r-- 1 qwe qwe    0 Dec 22 07:10 0-02-20221222071036.mkv
