--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
-total 2.5M
+total 5.8M
 -rw-r--r-- 1 qwe qwe 2.5M Dec 22 07:10 0-01-20221222070846.mkv
--rw-r--r-- 1 qwe qwe    0 Dec 22 07:10 0-02-20221222071036.mkv
+-rw-r--r-- 1 qwe qwe 262K Dec 22 07:11 0-02-20221222071036.mkv
+-rw-r--r-- 1 qwe qwe 3.0M Dec 22 09:09 0-03-20221222090915.mkv
