--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-total 768K
--rw-r--r-- 1 qwe qwe 768K Dec 23 07:38 0-01-20221223073842.mkv
+total 4.2M
+-rw-r--r-- 1 qwe qwe 3.7M Dec 23 07:39 0-01-20221223073842.mkv
+-rw-r--r-- 1 qwe qwe 512K Dec 23 07:39 0-01-20221223073942.mkv
