--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
-total 4.2M
+total 6.3M
 -rw-r--r-- 1 qwe qwe 3.7M Dec 23 07:39 0-01-20221223073842.mkv
--rw-r--r-- 1 qwe qwe 512K Dec 23 07:39 0-01-20221223073942.mkv
+-rw-r--r-- 1 qwe qwe 2.4M Dec 23 07:40 0-01-20221223073942.mkv
+-rw-r--r-- 1 qwe qwe 256K Dec 23 07:40 0-01-20221223074042.mkv
