--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
-total 908K
+total 4.0M
 -rw-r--r-- 1 qwe qwe 650K Dec 27 07:48 0-01-20221227074725.mkv
--rw-r--r-- 1 qwe qwe 256K Dec 27 07:49 0-02-20221227074933.mkv
+-rw-r--r-- 1 qwe qwe 369K Dec 27 07:50 0-02-20221227074933.mkv
+-rw-r--r-- 1 qwe qwe 3.0M Dec 27 10:09 0-03-20221227100817.mkv
