--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-total 1.5M
--rw-r--r-- 1 qwe qwe 1.5M Jan  2 07:16 0-01-20230102071622.mkv
+total 3.2M
+-rw-r--r-- 1 qwe qwe 3.0M Jan  2 07:17 0-01-20230102071622.mkv
+-rw-r--r-- 1 qwe qwe 256K Jan  2 07:17 0-01-20230102071722.mkv
