--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-total 3.4M
+total 3.5M
 -rw-r--r-- 1 qwe qwe 3.0M Jan  2 07:17 0-01-20230102071622.mkv
 -rw-r--r-- 1 qwe qwe 434K Jan  2 07:18 0-01-20230102071722.mkv
--rw-r--r-- 1 qwe qwe    0 Jan  2 09:39 0-02-20230102093937.mkv
+-rw-r--r-- 1 qwe qwe  89K Jan  2 09:40 0-02-20230102093937.mkv
+-rw-r--r-- 1 qwe qwe    0 Jan  2 14:36 0-03-20230102143640.mkv
