--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-total 0
--rw-r--r-- 1 qwe qwe 0 Jan  4 13:00 0-01-20230104130056.mkv
+total 88K
+-rw-r--r-- 1 qwe qwe 86K Jan  4 13:01 0-01-20230104130056.mkv
+-rw-r--r-- 1 qwe qwe   0 Jan  4 15:12 0-02-20230104151241.mkv
