--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
-total 88K
--rw-r--r-- 1 qwe qwe 86K Jan  4 13:01 0-01-20230104130056.mkv
--rw-r--r-- 1 qwe qwe   0 Jan  4 15:12 0-02-20230104151241.mkv
+total 3.0M
+-rw-r--r-- 1 qwe qwe  86K Jan  4 13:01 0-01-20230104130056.mkv
+-rw-r--r-- 1 qwe qwe  82K Jan  4 15:13 0-02-20230104151241.mkv
+-rw-r--r-- 1 qwe qwe 2.8M Jan  4 21:19 0-03-20230104211919.mkv
