--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-total 0
--rw-r--r-- 1 qwe qwe 0 Jan  5 16:28 0-01-20230105162853.mkv
+total 3.6M
+-rw-r--r-- 1 qwe qwe  78K Jan  5 16:29 0-01-20230105162853.mkv
+-rw-r--r-- 1 qwe qwe 3.5M Jan  5 21:19 0-02-20230105211809.mkv
