--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-total 0
--rw-r--r-- 1 qwe qwe 0 Jan  6 08:59 0-01-20230106085934.mkv
+total 76K
+-rw-r--r-- 1 qwe qwe 74K Jan  6 09:00 0-01-20230106085934.mkv
+-rw-r--r-- 1 qwe qwe   0 Jan  6 09:37 0-02-20230106093712.mkv
