--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-total 152K
--rw-r--r-- 1 qwe qwe 74K Jan  6 09:00 0-01-20230106085934.mkv
--rw-r--r-- 1 qwe qwe 73K Jan  6 09:38 0-02-20230106093712.mkv
--rw-r--r-- 1 qwe qwe   0 Jan  6 12:36 0-03-20230106123645.mkv
+total 3.5M
+-rw-r--r-- 1 qwe qwe  74K Jan  6 09:00 0-01-20230106085934.mkv
+-rw-r--r-- 1 qwe qwe  73K Jan  6 09:38 0-02-20230106093712.mkv
+-rw-r--r-- 1 qwe qwe  75K Jan  6 12:37 0-03-20230106123645.mkv
+-rw-r--r-- 1 qwe qwe 3.3M Jan  6 13:23 0-04-20230106132304.mkv
