--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-total 0
--rw-r--r-- 1 qwe qwe 0 Jan 13 12:57 0-01-20230113125714.mkv
+total 80K
+-rw-r--r-- 1 qwe qwe 78K Jan 13 12:58 0-01-20230113125714.mkv
+-rw-r--r-- 1 qwe qwe   0 Jan 13 13:01 0-02-20230113130140.mkv
