--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-total 1.8M
--rw-r--r-- 1 qwe qwe 1.8M Jan 14 10:59 0-01-20230114105827.mkv
+total 4.5M
+-rw-r--r-- 1 qwe qwe 3.7M Jan 14 10:59 0-01-20230114105827.mkv
+-rw-r--r-- 1 qwe qwe 768K Jan 14 10:59 0-01-20230114105927.mkv
