--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
-total 876K
+total 952K
 -rw-r--r-- 1 qwe qwe 875K Jan 15 09:11 0-01-20230115091038.mkv
--rw-r--r-- 1 qwe qwe    0 Jan 15 14:15 0-02-20230115141521.mkv
+-rw-r--r-- 1 qwe qwe  74K Jan 15 14:16 0-02-20230115141521.mkv
+-rw-r--r-- 1 qwe qwe    0 Jan 15 15:10 0-03-20230115151053.mkv
