--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-total 1.6M
+total 6.5M
 -rw-r--r-- 1 qwe qwe 875K Jan 15 09:11 0-01-20230115091038.mkv
 -rw-r--r-- 1 qwe qwe  74K Jan 15 14:16 0-02-20230115141521.mkv
 -rw-r--r-- 1 qwe qwe  74K Jan 15 15:11 0-03-20230115151053.mkv
--rw-r--r-- 1 qwe qwe 512K Jan 15 19:09 0-04-20230115190855.mkv
+-rw-r--r-- 1 qwe qwe 3.2M Jan 15 19:10 0-04-20230115190855.mkv
+-rw-r--r-- 1 qwe qwe 2.3M Jan 15 19:10 0-04-20230115191001.mkv
