--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-total 512K
--rw-r--r-- 1 qwe qwe 512K Jan 16 09:11 0-01-20230116091057.mkv
+total 3.8M
+-rw-r--r-- 1 qwe qwe 3.8M Jan 16 09:11 0-01-20230116091057.mkv
+-rw-r--r-- 1 qwe qwe    0 Jan 16 09:11 0-01-20230116091157.mkv
