--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-total 768K
--rw-r--r-- 1 qwe qwe 768K Jan 22 09:12 0-01-20230122091248.mkv
+total 3.3M
+-rw-r--r-- 1 qwe qwe 1.3M Jan 22 09:14 0-01-20230122091248.mkv
+-rw-r--r-- 1 qwe qwe 2.0M Jan 22 18:59 0-02-20230122185926.mkv
