--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-total 512K
--rw-r--r-- 1 qwe qwe 512K Jan 25 21:42 0-01-20230125214154.mkv
+total 1.5M
+-rw-r--r-- 1 qwe qwe 1.2M Jan 25 21:43 0-01-20230125214154.mkv
+-rw-r--r-- 1 qwe qwe 256K Jan 25 21:44 0-02-20230125214420.mkv
