--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
-total 1.5M
+total 2.6M
 -rw-r--r-- 1 qwe qwe 1.2M Jan 25 21:43 0-01-20230125214154.mkv
--rw-r--r-- 1 qwe qwe 256K Jan 25 21:44 0-02-20230125214420.mkv
+-rw-r--r-- 1 qwe qwe 415K Jan 25 21:45 0-02-20230125214420.mkv
+-rw-r--r-- 1 qwe qwe 1.0M Jan 25 21:46 0-03-20230125214615.mkv
