--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
-total 68K
+total 132K
 -rw-r--r-- 1 qwe qwe 68K Jan 26 09:25 0-01-20230126092423.mkv
--rw-r--r-- 1 qwe qwe   0 Jan 26 09:41 0-02-20230126094139.mkv
+-rw-r--r-- 1 qwe qwe 64K Jan 26 09:42 0-02-20230126094139.mkv
+-rw-r--r-- 1 qwe qwe   0 Jan 26 10:34 0-03-20230126103412.mkv
